--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-<div class="glow">Subdomain Takeover</div>
+<div class="glow">takeover by Tareqxploit</div>
 
 <div class="terminal-box">
     <p>> takeover by <strong>kiraxploit</strong> <span class="cursor">█</span></p>
